lfac eliza/elfac.output
Terminals unused in grammar

   RETURN
   INT
   CHAR
   FLOAT
   FALSE
   TRUE


Grammar

    0 $accept: program $end

    1 program: clase functii declaratii instructiuni

    2 clase: clasa
    3      | clase clasa

    4 clasa: CLASS ID '{' corpclasa '}' ';'

    5 corpclasa: INTERN ':' varinterne EXTERN ':' varexterne

    6 varinterne: declaratii

    7 varexterne: declaratii

    8 functii: functie
    9        | functii functie

   10 functie: ID '(' argumente ')' '-' '>' TIPVAR '{' bloc '}' ';'

   11 argumente: TIPVAR ID
   12          | TIPVAR ID ',' argumente

   13 declaratii: listedeclaratie ';'
   14           | declaratii listedeclaratie ';'

   15 listedeclaratie: VAR TIPVAR listadeclaratie ';'

   16 listadeclaratie: listadeclaratie ',' declaratie
   17                | declaratie

   18 declaratie: ID
   19           | ID '-' '>' initializare

   20 initializare: NR
   21             | NRFLOAT
   22             | SINGLECHAR
   23             | STRING

   24 instructiuni: MAIN BGIN bloc END

   25 bloc: instructiune
   26     | instructiune bloc

   27 instructiune: ID '-' '>' expresie ';'
   28             | ID '[' NR ']' '-' '>' expresie ';'
   29             | PRINT '(' NR ')' ';'
   30             | PRINT '(' ID ')' ';'
   31             | instrIF ';'
   32             | instrWHILE ';'
   33             | RETRN ID ';'
   34             | RETRN NR ';'
   35             | RETRN NRFLOAT ';'
   36             | RETRN BOOL ';'

   37 instrIF: IF '(' listaexprIF ')' THEN '{' bloc '}'
   38        | IF '(' listaexprIF ')' THEN '{' bloc '}' ELSE '{' bloc '}'

   39 listaexprIF: expresieIF AND listaexprIF
   40            | expresieIF OR listaexprIF
   41            | expresieIF

   42 expresieIF: expresie EQUAL expresie
   43           | expresie LE expresie
   44           | expresie GE expresie
   45           | expresie GL expresie

   46 instrWHILE: WHILE '(' listaexprWHILE ')' DO '{' bloc '}'

   47 listaexprWHILE: expresieWHILE AND listaexprWHILE
   48               | expresieWHILE OR listaexprWHILE
   49               | expresieWHILE

   50 expresieWHILE: expresie EQUAL expresie
   51              | expresie LE expresie
   52              | expresie GE expresie
   53              | expresie GL expresie

   54 expresie: expresie '+' expresie
   55         | expresie '-' expresie
   56         | expresie '*' expresie
   57         | expresie '/' expresie
   58         | NR
   59         | NRFLOAT
   60         | ID
   61         | SINGLECHAR


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 29 30 37 38 46
')' (41) 10 29 30 37 38 46
'*' (42) 56
'+' (43) 54
',' (44) 12 16
'-' (45) 10 19 27 28 55
'/' (47) 57
':' (58) 5
';' (59) 4 10 13 14 15 27 28 29 30 31 32 33 34 35 36
'>' (62) 10 19 27 28
'[' (91) 28
']' (93) 28
'{' (123) 4 10 37 38 46
'}' (125) 4 10 37 38 46
error (256)
VAR (258) 15
PRINT (259) 29 30
NR (260) 20 28 29 34 58
RETURN (261)
TIPVAR (262) 10 11 12 15
ID (263) 4 10 11 12 18 19 27 28 30 33 60
SINGLECHAR (264) 22 61
STRING (265) 23
BGIN (266) 24
END (267) 24
MAIN (268) 24
IF (269) 37 38
CLASS (270) 4
INTERN (271) 5
EXTERN (272) 5
INT (273)
ELSE (274) 38
RETRN (275) 33 34 35 36
AND (276) 39 47
OR (277) 40 48
EQUAL (278) 42 50
GE (279) 44 52
LE (280) 43 51
GL (281) 45 53
THEN (282) 37 38
WHILE (283) 46
DO (284) 46
CHAR (285)
BOOL (286) 36
FLOAT (287)
NRFLOAT (288) 21 35 59
FALSE (289)
TRUE (290)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1, on right: 0
clase (52)
    on left: 2 3, on right: 1 3
clasa (53)
    on left: 4, on right: 2 3
corpclasa (54)
    on left: 5, on right: 4
varinterne (55)
    on left: 6, on right: 5
varexterne (56)
    on left: 7, on right: 5
functii (57)
    on left: 8 9, on right: 1 9
functie (58)
    on left: 10, on right: 8 9
argumente (59)
    on left: 11 12, on right: 10 12
declaratii (60)
    on left: 13 14, on right: 1 6 7 14
listedeclaratie (61)
    on left: 15, on right: 13 14
listadeclaratie (62)
    on left: 16 17, on right: 15 16
declaratie (63)
    on left: 18 19, on right: 16 17
initializare (64)
    on left: 20 21 22 23, on right: 19
instructiuni (65)
    on left: 24, on right: 1
bloc (66)
    on left: 25 26, on right: 10 24 26 37 38 46
instructiune (67)
    on left: 27 28 29 30 31 32 33 34 35 36, on right: 25 26
instrIF (68)
    on left: 37 38, on right: 31
listaexprIF (69)
    on left: 39 40 41, on right: 37 38 39 40
expresieIF (70)
    on left: 42 43 44 45, on right: 39 40 41
instrWHILE (71)
    on left: 46, on right: 32
listaexprWHILE (72)
    on left: 47 48 49, on right: 46 47 48
expresieWHILE (73)
    on left: 50 51 52 53, on right: 47 48 49
expresie (74)
    on left: 54 55 56 57 58 59 60 61, on right: 27 28 42 43 44 45 50
    51 52 53 54 55 56 57


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program  go to state 2
    clase    go to state 3
    clasa    go to state 4


State 1

    4 clasa: CLASS . ID '{' corpclasa '}' ';'

    ID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: clase . functii declaratii instructiuni
    3 clase: clase . clasa

    ID     shift, and go to state 7
    CLASS  shift, and go to state 1

    clasa    go to state 8
    functii  go to state 9
    functie  go to state 10


State 4

    2 clase: clasa .

    $default  reduce using rule 2 (clase)


State 5

    4 clasa: CLASS ID . '{' corpclasa '}' ';'

    '{'  shift, and go to state 11


State 6

    0 $accept: program $end .

    $default  accept


State 7

   10 functie: ID . '(' argumente ')' '-' '>' TIPVAR '{' bloc '}' ';'

    '('  shift, and go to state 12


State 8

    3 clase: clase clasa .

    $default  reduce using rule 3 (clase)


State 9

    1 program: clase functii . declaratii instructiuni
    9 functii: functii . functie

    VAR  shift, and go to state 13
    ID   shift, and go to state 7

    functie          go to state 14
    declaratii       go to state 15
    listedeclaratie  go to state 16


State 10

    8 functii: functie .

    $default  reduce using rule 8 (functii)


State 11

    4 clasa: CLASS ID '{' . corpclasa '}' ';'

    INTERN  shift, and go to state 17

    corpclasa  go to state 18


State 12

   10 functie: ID '(' . argumente ')' '-' '>' TIPVAR '{' bloc '}' ';'

    TIPVAR  shift, and go to state 19

    argumente  go to state 20


State 13

   15 listedeclaratie: VAR . TIPVAR listadeclaratie ';'

    TIPVAR  shift, and go to state 21


State 14

    9 functii: functii functie .

    $default  reduce using rule 9 (functii)


State 15

    1 program: clase functii declaratii . instructiuni
   14 declaratii: declaratii . listedeclaratie ';'

    VAR   shift, and go to state 13
    MAIN  shift, and go to state 22

    listedeclaratie  go to state 23
    instructiuni     go to state 24


State 16

   13 declaratii: listedeclaratie . ';'

    ';'  shift, and go to state 25


State 17

    5 corpclasa: INTERN . ':' varinterne EXTERN ':' varexterne

    ':'  shift, and go to state 26


State 18

    4 clasa: CLASS ID '{' corpclasa . '}' ';'

    '}'  shift, and go to state 27


State 19

   11 argumente: TIPVAR . ID
   12          | TIPVAR . ID ',' argumente

    ID  shift, and go to state 28


State 20

   10 functie: ID '(' argumente . ')' '-' '>' TIPVAR '{' bloc '}' ';'

    ')'  shift, and go to state 29


State 21

   15 listedeclaratie: VAR TIPVAR . listadeclaratie ';'

    ID  shift, and go to state 30

    listadeclaratie  go to state 31
    declaratie       go to state 32


State 22

   24 instructiuni: MAIN . BGIN bloc END

    BGIN  shift, and go to state 33


State 23

   14 declaratii: declaratii listedeclaratie . ';'

    ';'  shift, and go to state 34


State 24

    1 program: clase functii declaratii instructiuni .

    $default  reduce using rule 1 (program)


State 25

   13 declaratii: listedeclaratie ';' .

    $default  reduce using rule 13 (declaratii)


State 26

    5 corpclasa: INTERN ':' . varinterne EXTERN ':' varexterne

    VAR  shift, and go to state 13

    varinterne       go to state 35
    declaratii       go to state 36
    listedeclaratie  go to state 16


State 27

    4 clasa: CLASS ID '{' corpclasa '}' . ';'

    ';'  shift, and go to state 37


State 28

   11 argumente: TIPVAR ID .
   12          | TIPVAR ID . ',' argumente

    ','  shift, and go to state 38

    $default  reduce using rule 11 (argumente)


State 29

   10 functie: ID '(' argumente ')' . '-' '>' TIPVAR '{' bloc '}' ';'

    '-'  shift, and go to state 39


State 30

   18 declaratie: ID .
   19           | ID . '-' '>' initializare

    '-'  shift, and go to state 40

    $default  reduce using rule 18 (declaratie)


State 31

   15 listedeclaratie: VAR TIPVAR listadeclaratie . ';'
   16 listadeclaratie: listadeclaratie . ',' declaratie

    ';'  shift, and go to state 41
    ','  shift, and go to state 42


State 32

   17 listadeclaratie: declaratie .

    $default  reduce using rule 17 (listadeclaratie)


State 33

   24 instructiuni: MAIN BGIN . bloc END

    PRINT  shift, and go to state 43
    ID     shift, and go to state 44
    IF     shift, and go to state 45
    RETRN  shift, and go to state 46
    WHILE  shift, and go to state 47

    bloc          go to state 48
    instructiune  go to state 49
    instrIF       go to state 50
    instrWHILE    go to state 51


State 34

   14 declaratii: declaratii listedeclaratie ';' .

    $default  reduce using rule 14 (declaratii)


State 35

    5 corpclasa: INTERN ':' varinterne . EXTERN ':' varexterne

    EXTERN  shift, and go to state 52


State 36

    6 varinterne: declaratii .
   14 declaratii: declaratii . listedeclaratie ';'

    VAR  shift, and go to state 13

    $default  reduce using rule 6 (varinterne)

    listedeclaratie  go to state 23


State 37

    4 clasa: CLASS ID '{' corpclasa '}' ';' .

    $default  reduce using rule 4 (clasa)


State 38

   12 argumente: TIPVAR ID ',' . argumente

    TIPVAR  shift, and go to state 19

    argumente  go to state 53


State 39

   10 functie: ID '(' argumente ')' '-' . '>' TIPVAR '{' bloc '}' ';'

    '>'  shift, and go to state 54


State 40

   19 declaratie: ID '-' . '>' initializare

    '>'  shift, and go to state 55


State 41

   15 listedeclaratie: VAR TIPVAR listadeclaratie ';' .

    $default  reduce using rule 15 (listedeclaratie)


State 42

   16 listadeclaratie: listadeclaratie ',' . declaratie

    ID  shift, and go to state 30

    declaratie  go to state 56


State 43

   29 instructiune: PRINT . '(' NR ')' ';'
   30             | PRINT . '(' ID ')' ';'

    '('  shift, and go to state 57


State 44

   27 instructiune: ID . '-' '>' expresie ';'
   28             | ID . '[' NR ']' '-' '>' expresie ';'

    '-'  shift, and go to state 58
    '['  shift, and go to state 59


State 45

   37 instrIF: IF . '(' listaexprIF ')' THEN '{' bloc '}'
   38        | IF . '(' listaexprIF ')' THEN '{' bloc '}' ELSE '{' bloc '}'

    '('  shift, and go to state 60


State 46

   33 instructiune: RETRN . ID ';'
   34             | RETRN . NR ';'
   35             | RETRN . NRFLOAT ';'
   36             | RETRN . BOOL ';'

    NR       shift, and go to state 61
    ID       shift, and go to state 62
    BOOL     shift, and go to state 63
    NRFLOAT  shift, and go to state 64


State 47

   46 instrWHILE: WHILE . '(' listaexprWHILE ')' DO '{' bloc '}'

    '('  shift, and go to state 65


State 48

   24 instructiuni: MAIN BGIN bloc . END

    END  shift, and go to state 66


State 49

   25 bloc: instructiune .
   26     | instructiune . bloc

    PRINT  shift, and go to state 43
    ID     shift, and go to state 44
    IF     shift, and go to state 45
    RETRN  shift, and go to state 46
    WHILE  shift, and go to state 47

    $default  reduce using rule 25 (bloc)

    bloc          go to state 67
    instructiune  go to state 49
    instrIF       go to state 50
    instrWHILE    go to state 51


State 50

   31 instructiune: instrIF . ';'

    ';'  shift, and go to state 68


State 51

   32 instructiune: instrWHILE . ';'

    ';'  shift, and go to state 69


State 52

    5 corpclasa: INTERN ':' varinterne EXTERN . ':' varexterne

    ':'  shift, and go to state 70


State 53

   12 argumente: TIPVAR ID ',' argumente .

    $default  reduce using rule 12 (argumente)


State 54

   10 functie: ID '(' argumente ')' '-' '>' . TIPVAR '{' bloc '}' ';'

    TIPVAR  shift, and go to state 71


State 55

   19 declaratie: ID '-' '>' . initializare

    NR          shift, and go to state 72
    SINGLECHAR  shift, and go to state 73
    STRING      shift, and go to state 74
    NRFLOAT     shift, and go to state 75

    initializare  go to state 76


State 56

   16 listadeclaratie: listadeclaratie ',' declaratie .

    $default  reduce using rule 16 (listadeclaratie)


State 57

   29 instructiune: PRINT '(' . NR ')' ';'
   30             | PRINT '(' . ID ')' ';'

    NR  shift, and go to state 77
    ID  shift, and go to state 78


State 58

   27 instructiune: ID '-' . '>' expresie ';'

    '>'  shift, and go to state 79


State 59

   28 instructiune: ID '[' . NR ']' '-' '>' expresie ';'

    NR  shift, and go to state 80


State 60

   37 instrIF: IF '(' . listaexprIF ')' THEN '{' bloc '}'
   38        | IF '(' . listaexprIF ')' THEN '{' bloc '}' ELSE '{' bloc '}'

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    listaexprIF  go to state 85
    expresieIF   go to state 86
    expresie     go to state 87


State 61

   34 instructiune: RETRN NR . ';'

    ';'  shift, and go to state 88


State 62

   33 instructiune: RETRN ID . ';'

    ';'  shift, and go to state 89


State 63

   36 instructiune: RETRN BOOL . ';'

    ';'  shift, and go to state 90


State 64

   35 instructiune: RETRN NRFLOAT . ';'

    ';'  shift, and go to state 91


State 65

   46 instrWHILE: WHILE '(' . listaexprWHILE ')' DO '{' bloc '}'

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    listaexprWHILE  go to state 92
    expresieWHILE   go to state 93
    expresie        go to state 94


State 66

   24 instructiuni: MAIN BGIN bloc END .

    $default  reduce using rule 24 (instructiuni)


State 67

   26 bloc: instructiune bloc .

    $default  reduce using rule 26 (bloc)


State 68

   31 instructiune: instrIF ';' .

    $default  reduce using rule 31 (instructiune)


State 69

   32 instructiune: instrWHILE ';' .

    $default  reduce using rule 32 (instructiune)


State 70

    5 corpclasa: INTERN ':' varinterne EXTERN ':' . varexterne

    VAR  shift, and go to state 13

    varexterne       go to state 95
    declaratii       go to state 96
    listedeclaratie  go to state 16


State 71

   10 functie: ID '(' argumente ')' '-' '>' TIPVAR . '{' bloc '}' ';'

    '{'  shift, and go to state 97


State 72

   20 initializare: NR .

    $default  reduce using rule 20 (initializare)


State 73

   22 initializare: SINGLECHAR .

    $default  reduce using rule 22 (initializare)


State 74

   23 initializare: STRING .

    $default  reduce using rule 23 (initializare)


State 75

   21 initializare: NRFLOAT .

    $default  reduce using rule 21 (initializare)


State 76

   19 declaratie: ID '-' '>' initializare .

    $default  reduce using rule 19 (declaratie)


State 77

   29 instructiune: PRINT '(' NR . ')' ';'

    ')'  shift, and go to state 98


State 78

   30 instructiune: PRINT '(' ID . ')' ';'

    ')'  shift, and go to state 99


State 79

   27 instructiune: ID '-' '>' . expresie ';'

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    expresie  go to state 100


State 80

   28 instructiune: ID '[' NR . ']' '-' '>' expresie ';'

    ']'  shift, and go to state 101


State 81

   58 expresie: NR .

    $default  reduce using rule 58 (expresie)


State 82

   60 expresie: ID .

    $default  reduce using rule 60 (expresie)


State 83

   61 expresie: SINGLECHAR .

    $default  reduce using rule 61 (expresie)


State 84

   59 expresie: NRFLOAT .

    $default  reduce using rule 59 (expresie)


State 85

   37 instrIF: IF '(' listaexprIF . ')' THEN '{' bloc '}'
   38        | IF '(' listaexprIF . ')' THEN '{' bloc '}' ELSE '{' bloc '}'

    ')'  shift, and go to state 102


State 86

   39 listaexprIF: expresieIF . AND listaexprIF
   40            | expresieIF . OR listaexprIF
   41            | expresieIF .

    AND  shift, and go to state 103
    OR   shift, and go to state 104

    $default  reduce using rule 41 (listaexprIF)


State 87

   42 expresieIF: expresie . EQUAL expresie
   43           | expresie . LE expresie
   44           | expresie . GE expresie
   45           | expresie . GL expresie
   54 expresie: expresie . '+' expresie
   55         | expresie . '-' expresie
   56         | expresie . '*' expresie
   57         | expresie . '/' expresie

    EQUAL  shift, and go to state 105
    GE     shift, and go to state 106
    LE     shift, and go to state 107
    GL     shift, and go to state 108
    '+'    shift, and go to state 109
    '-'    shift, and go to state 110
    '*'    shift, and go to state 111
    '/'    shift, and go to state 112


State 88

   34 instructiune: RETRN NR ';' .

    $default  reduce using rule 34 (instructiune)


State 89

   33 instructiune: RETRN ID ';' .

    $default  reduce using rule 33 (instructiune)


State 90

   36 instructiune: RETRN BOOL ';' .

    $default  reduce using rule 36 (instructiune)


State 91

   35 instructiune: RETRN NRFLOAT ';' .

    $default  reduce using rule 35 (instructiune)


State 92

   46 instrWHILE: WHILE '(' listaexprWHILE . ')' DO '{' bloc '}'

    ')'  shift, and go to state 113


State 93

   47 listaexprWHILE: expresieWHILE . AND listaexprWHILE
   48               | expresieWHILE . OR listaexprWHILE
   49               | expresieWHILE .

    AND  shift, and go to state 114
    OR   shift, and go to state 115

    $default  reduce using rule 49 (listaexprWHILE)


State 94

   50 expresieWHILE: expresie . EQUAL expresie
   51              | expresie . LE expresie
   52              | expresie . GE expresie
   53              | expresie . GL expresie
   54 expresie: expresie . '+' expresie
   55         | expresie . '-' expresie
   56         | expresie . '*' expresie
   57         | expresie . '/' expresie

    EQUAL  shift, and go to state 116
    GE     shift, and go to state 117
    LE     shift, and go to state 118
    GL     shift, and go to state 119
    '+'    shift, and go to state 109
    '-'    shift, and go to state 110
    '*'    shift, and go to state 111
    '/'    shift, and go to state 112


State 95

    5 corpclasa: INTERN ':' varinterne EXTERN ':' varexterne .

    $default  reduce using rule 5 (corpclasa)


State 96

    7 varexterne: declaratii .
   14 declaratii: declaratii . listedeclaratie ';'

    VAR  shift, and go to state 13

    $default  reduce using rule 7 (varexterne)

    listedeclaratie  go to state 23


State 97

   10 functie: ID '(' argumente ')' '-' '>' TIPVAR '{' . bloc '}' ';'

    PRINT  shift, and go to state 43
    ID     shift, and go to state 44
    IF     shift, and go to state 45
    RETRN  shift, and go to state 46
    WHILE  shift, and go to state 47

    bloc          go to state 120
    instructiune  go to state 49
    instrIF       go to state 50
    instrWHILE    go to state 51


State 98

   29 instructiune: PRINT '(' NR ')' . ';'

    ';'  shift, and go to state 121


State 99

   30 instructiune: PRINT '(' ID ')' . ';'

    ';'  shift, and go to state 122


State 100

   27 instructiune: ID '-' '>' expresie . ';'
   54 expresie: expresie . '+' expresie
   55         | expresie . '-' expresie
   56         | expresie . '*' expresie
   57         | expresie . '/' expresie

    '+'  shift, and go to state 109
    '-'  shift, and go to state 110
    '*'  shift, and go to state 111
    '/'  shift, and go to state 112
    ';'  shift, and go to state 123


State 101

   28 instructiune: ID '[' NR ']' . '-' '>' expresie ';'

    '-'  shift, and go to state 124


State 102

   37 instrIF: IF '(' listaexprIF ')' . THEN '{' bloc '}'
   38        | IF '(' listaexprIF ')' . THEN '{' bloc '}' ELSE '{' bloc '}'

    THEN  shift, and go to state 125


State 103

   39 listaexprIF: expresieIF AND . listaexprIF

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    listaexprIF  go to state 126
    expresieIF   go to state 86
    expresie     go to state 87


State 104

   40 listaexprIF: expresieIF OR . listaexprIF

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    listaexprIF  go to state 127
    expresieIF   go to state 86
    expresie     go to state 87


State 105

   42 expresieIF: expresie EQUAL . expresie

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    expresie  go to state 128


State 106

   44 expresieIF: expresie GE . expresie

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    expresie  go to state 129


State 107

   43 expresieIF: expresie LE . expresie

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    expresie  go to state 130


State 108

   45 expresieIF: expresie GL . expresie

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    expresie  go to state 131


State 109

   54 expresie: expresie '+' . expresie

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    expresie  go to state 132


State 110

   55 expresie: expresie '-' . expresie

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    expresie  go to state 133


State 111

   56 expresie: expresie '*' . expresie

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    expresie  go to state 134


State 112

   57 expresie: expresie '/' . expresie

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    expresie  go to state 135


State 113

   46 instrWHILE: WHILE '(' listaexprWHILE ')' . DO '{' bloc '}'

    DO  shift, and go to state 136


State 114

   47 listaexprWHILE: expresieWHILE AND . listaexprWHILE

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    listaexprWHILE  go to state 137
    expresieWHILE   go to state 93
    expresie        go to state 94


State 115

   48 listaexprWHILE: expresieWHILE OR . listaexprWHILE

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    listaexprWHILE  go to state 138
    expresieWHILE   go to state 93
    expresie        go to state 94


State 116

   50 expresieWHILE: expresie EQUAL . expresie

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    expresie  go to state 139


State 117

   52 expresieWHILE: expresie GE . expresie

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    expresie  go to state 140


State 118

   51 expresieWHILE: expresie LE . expresie

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    expresie  go to state 141


State 119

   53 expresieWHILE: expresie GL . expresie

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    expresie  go to state 142


State 120

   10 functie: ID '(' argumente ')' '-' '>' TIPVAR '{' bloc . '}' ';'

    '}'  shift, and go to state 143


State 121

   29 instructiune: PRINT '(' NR ')' ';' .

    $default  reduce using rule 29 (instructiune)


State 122

   30 instructiune: PRINT '(' ID ')' ';' .

    $default  reduce using rule 30 (instructiune)


State 123

   27 instructiune: ID '-' '>' expresie ';' .

    $default  reduce using rule 27 (instructiune)


State 124

   28 instructiune: ID '[' NR ']' '-' . '>' expresie ';'

    '>'  shift, and go to state 144


State 125

   37 instrIF: IF '(' listaexprIF ')' THEN . '{' bloc '}'
   38        | IF '(' listaexprIF ')' THEN . '{' bloc '}' ELSE '{' bloc '}'

    '{'  shift, and go to state 145


State 126

   39 listaexprIF: expresieIF AND listaexprIF .

    $default  reduce using rule 39 (listaexprIF)


State 127

   40 listaexprIF: expresieIF OR listaexprIF .

    $default  reduce using rule 40 (listaexprIF)


State 128

   42 expresieIF: expresie EQUAL expresie .
   54 expresie: expresie . '+' expresie
   55         | expresie . '-' expresie
   56         | expresie . '*' expresie
   57         | expresie . '/' expresie

    '+'  shift, and go to state 109
    '-'  shift, and go to state 110
    '*'  shift, and go to state 111
    '/'  shift, and go to state 112

    $default  reduce using rule 42 (expresieIF)


State 129

   44 expresieIF: expresie GE expresie .
   54 expresie: expresie . '+' expresie
   55         | expresie . '-' expresie
   56         | expresie . '*' expresie
   57         | expresie . '/' expresie

    '+'  shift, and go to state 109
    '-'  shift, and go to state 110
    '*'  shift, and go to state 111
    '/'  shift, and go to state 112

    $default  reduce using rule 44 (expresieIF)


State 130

   43 expresieIF: expresie LE expresie .
   54 expresie: expresie . '+' expresie
   55         | expresie . '-' expresie
   56         | expresie . '*' expresie
   57         | expresie . '/' expresie

    '+'  shift, and go to state 109
    '-'  shift, and go to state 110
    '*'  shift, and go to state 111
    '/'  shift, and go to state 112

    $default  reduce using rule 43 (expresieIF)


State 131

   45 expresieIF: expresie GL expresie .
   54 expresie: expresie . '+' expresie
   55         | expresie . '-' expresie
   56         | expresie . '*' expresie
   57         | expresie . '/' expresie

    '+'  shift, and go to state 109
    '-'  shift, and go to state 110
    '*'  shift, and go to state 111
    '/'  shift, and go to state 112

    $default  reduce using rule 45 (expresieIF)


State 132

   54 expresie: expresie . '+' expresie
   54         | expresie '+' expresie .
   55         | expresie . '-' expresie
   56         | expresie . '*' expresie
   57         | expresie . '/' expresie

    '*'  shift, and go to state 111
    '/'  shift, and go to state 112

    $default  reduce using rule 54 (expresie)


State 133

   54 expresie: expresie . '+' expresie
   55         | expresie . '-' expresie
   55         | expresie '-' expresie .
   56         | expresie . '*' expresie
   57         | expresie . '/' expresie

    '*'  shift, and go to state 111
    '/'  shift, and go to state 112

    $default  reduce using rule 55 (expresie)


State 134

   54 expresie: expresie . '+' expresie
   55         | expresie . '-' expresie
   56         | expresie . '*' expresie
   56         | expresie '*' expresie .
   57         | expresie . '/' expresie

    $default  reduce using rule 56 (expresie)


State 135

   54 expresie: expresie . '+' expresie
   55         | expresie . '-' expresie
   56         | expresie . '*' expresie
   57         | expresie . '/' expresie
   57         | expresie '/' expresie .

    $default  reduce using rule 57 (expresie)


State 136

   46 instrWHILE: WHILE '(' listaexprWHILE ')' DO . '{' bloc '}'

    '{'  shift, and go to state 146


State 137

   47 listaexprWHILE: expresieWHILE AND listaexprWHILE .

    $default  reduce using rule 47 (listaexprWHILE)


State 138

   48 listaexprWHILE: expresieWHILE OR listaexprWHILE .

    $default  reduce using rule 48 (listaexprWHILE)


State 139

   50 expresieWHILE: expresie EQUAL expresie .
   54 expresie: expresie . '+' expresie
   55         | expresie . '-' expresie
   56         | expresie . '*' expresie
   57         | expresie . '/' expresie

    '+'  shift, and go to state 109
    '-'  shift, and go to state 110
    '*'  shift, and go to state 111
    '/'  shift, and go to state 112

    $default  reduce using rule 50 (expresieWHILE)


State 140

   52 expresieWHILE: expresie GE expresie .
   54 expresie: expresie . '+' expresie
   55         | expresie . '-' expresie
   56         | expresie . '*' expresie
   57         | expresie . '/' expresie

    '+'  shift, and go to state 109
    '-'  shift, and go to state 110
    '*'  shift, and go to state 111
    '/'  shift, and go to state 112

    $default  reduce using rule 52 (expresieWHILE)


State 141

   51 expresieWHILE: expresie LE expresie .
   54 expresie: expresie . '+' expresie
   55         | expresie . '-' expresie
   56         | expresie . '*' expresie
   57         | expresie . '/' expresie

    '+'  shift, and go to state 109
    '-'  shift, and go to state 110
    '*'  shift, and go to state 111
    '/'  shift, and go to state 112

    $default  reduce using rule 51 (expresieWHILE)


State 142

   53 expresieWHILE: expresie GL expresie .
   54 expresie: expresie . '+' expresie
   55         | expresie . '-' expresie
   56         | expresie . '*' expresie
   57         | expresie . '/' expresie

    '+'  shift, and go to state 109
    '-'  shift, and go to state 110
    '*'  shift, and go to state 111
    '/'  shift, and go to state 112

    $default  reduce using rule 53 (expresieWHILE)


State 143

   10 functie: ID '(' argumente ')' '-' '>' TIPVAR '{' bloc '}' . ';'

    ';'  shift, and go to state 147


State 144

   28 instructiune: ID '[' NR ']' '-' '>' . expresie ';'

    NR          shift, and go to state 81
    ID          shift, and go to state 82
    SINGLECHAR  shift, and go to state 83
    NRFLOAT     shift, and go to state 84

    expresie  go to state 148


State 145

   37 instrIF: IF '(' listaexprIF ')' THEN '{' . bloc '}'
   38        | IF '(' listaexprIF ')' THEN '{' . bloc '}' ELSE '{' bloc '}'

    PRINT  shift, and go to state 43
    ID     shift, and go to state 44
    IF     shift, and go to state 45
    RETRN  shift, and go to state 46
    WHILE  shift, and go to state 47

    bloc          go to state 149
    instructiune  go to state 49
    instrIF       go to state 50
    instrWHILE    go to state 51


State 146

   46 instrWHILE: WHILE '(' listaexprWHILE ')' DO '{' . bloc '}'

    PRINT  shift, and go to state 43
    ID     shift, and go to state 44
    IF     shift, and go to state 45
    RETRN  shift, and go to state 46
    WHILE  shift, and go to state 47

    bloc          go to state 150
    instructiune  go to state 49
    instrIF       go to state 50
    instrWHILE    go to state 51


State 147

   10 functie: ID '(' argumente ')' '-' '>' TIPVAR '{' bloc '}' ';' .

    $default  reduce using rule 10 (functie)


State 148

   28 instructiune: ID '[' NR ']' '-' '>' expresie . ';'
   54 expresie: expresie . '+' expresie
   55         | expresie . '-' expresie
   56         | expresie . '*' expresie
   57         | expresie . '/' expresie

    '+'  shift, and go to state 109
    '-'  shift, and go to state 110
    '*'  shift, and go to state 111
    '/'  shift, and go to state 112
    ';'  shift, and go to state 151


State 149

   37 instrIF: IF '(' listaexprIF ')' THEN '{' bloc . '}'
   38        | IF '(' listaexprIF ')' THEN '{' bloc . '}' ELSE '{' bloc '}'
